# Synkban

./: .gitignore  CLAUDE.md  Dockerfile  README.md  build.sh  docker-build.sh  package-lock.json  package.json  playwright.config.ts  record-demo.sh
.github/workflows/: release.yml
backend/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: desktop.rs  errors.rs  git_sync.rs  lib.rs  main.rs  models.rs  store.rs
backend/src/handlers/: boards.rs  cards.rs  labels.rs  lists.rs  mod.rs  sync.rs
backend/src/store/: attachments.rs  boards.rs  card_index.rs  cards.rs  checklist.rs  gc.rs  io.rs  labels.rs  lists.rs  mod.rs  paths.rs  walk.rs
backend/tests/: integration.rs
docs/: development.md  self-hosting-caddy-security.md
electron/: main.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.demo.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/demo/: demo.spec.ts
frontend/e2e/: board.spec.ts  checklist.spec.ts  electron.spec.ts  focus.spec.ts  rename.spec.ts  reorder.spec.ts  touch.spec.ts  touchHelpers.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  BoardHeaderContext.tsx  LabelContext.tsx  LabelDrawerContext.tsx  api.test.ts  api.ts  autolink.ts  boardInput.test.ts  boardInput.ts  changePoller.test.ts  changePoller.ts  confirm.tsx  dialogKeys.ts  filter.test.ts  filter.ts  focusRestoration.ts  focusTrap.ts  index.tsx  mdInput.test.ts  mdInput.ts  mutationQueue.test.ts  mutationQueue.ts  overlayLayers.ts  positions.test.ts  (+9 more)
tests/: app.spec.ts
(+24 files in other folders)
