[package]
name = "synkban"
version = "0.1.0"
edition = "2021"

[lib]
name = "synkban"
path = "src/lib.rs"

[[bin]]
name = "synkban"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
include_dir = "0.7"
mime_guess = "2"
image = "0.25"
tauri = { version = "2", optional = true, features = ["devtools"] }

[build-dependencies]
tauri-build = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
desktop = ["dep:tauri", "dep:tauri-build"]
